--- a/margin.html
+++ b/margin.html
@@ -3157,7 +3157,9 @@
                             </td>
                         </div>
                     </tr>
-                    <tr style="border:1px solid #000000; border-left: none; border-right: none; ">
+                </table>
+                 <table style="width: 100%;">
+                     <tr style="border:1px solid #000000; border-left: none; border-right: none; ">
                         <td>
                             <div style="margin-top: -10px; margin-bottom: 20px;">
                                 <p style="border-left: 3px; padding-left: 3px; "><strong>6a</strong> <span
@@ -3198,10 +3200,7 @@
                             <span style="padding-left: 50px; "><strong>{{account.create_date}}</strong></span>
                         </td>
                     </tr>
-                </table>
-                <!-- <table style="width: 100%;">
-                    
-                </table> -->
+                </table> 
                 <div style="margin-top: -2px;">
                     <strong style="background-color: black; color: aliceblue;">Part II</strong>
                     <strong style="padding-left: 10px;">Claim of Tax Treaty Benefits</strong>(for chapter 3 purposes
