--- a/margin.html
+++ b/margin.html
@@ -3159,7 +3159,7 @@
             </div>
         </tr>
         </table>
-        <table style="width: 100%;">
+        <table style="width: 115;">
             <tr style="border:1px solid; border-left: none; border-right: none; ">
                 <td>
                     <div style="margin-top: -10px; margin-bottom: 20px;">
@@ -3175,7 +3175,7 @@
                     </div>
                 </td>
                 <td>
-                    <div style="margin-right: 50px;">
+                    <div style="margin-right: 80px;">
                         <div style="margin-top: -40px;">
                             <input type="checkbox" id="1" class="" />
                             <label for="1 "> &nbsp;
