--- a/margin.html
+++ b/margin.html
@@ -3159,7 +3159,7 @@
             </div>
         </tr>
         </table>
-        <table style="width: 125%;">
+        <table style="width: 120%;">
             <tr style="border:1px solid; border-left: none; border-right: none; ">
                 <td>
                     <div style="margin-top: -10px; margin-bottom: 20px;">
@@ -3195,7 +3195,7 @@
                     <div style="margin-top: -10px; margin-bottom: 20px;">
                         <p style="border-left: 3px; border-right: none; padding-left: 3px;"><strong>8</strong> <span
                                 style="padding-left: 5px;">Date of birth (MM-DD-YYYY) (see
-                                instructions</span></p>
+                                instructions)</span></p>
                     </div>
                     <span style="padding-left: 50px; "><strong>{{account.create_date}}</strong></span>
                 </td>
