--- a/margin.html
+++ b/margin.html
@@ -3175,7 +3175,7 @@
                     </div>
                 </td>
                 <td>
-                    <div style="margin-right: 100px;">
+                    <div style="margin-right: 100px; padding-right: 30px;">
                         <div style="margin-top: -40px;">
                             <input type="checkbox" id="1" class="" />
                             <label for="1 "> &nbsp;
