--- a/cash.html
+++ b/cash.html
@@ -3853,8 +3853,8 @@
         <!-- Adding page 13  -->
         <!-- ................................................-->
 
-        <div class="container" style="margin-top: 200px;" >
-            <div class="header mt-15">
+        <div class="container" style="margin-top: 300px;" >
+            <div class="header">
                 <div class="head-left">
                     <img src="images/logo.jpg" alt="logo">
                 </div>
