--- a/margin.html
+++ b/margin.html
@@ -3200,16 +3200,44 @@
                             <div style="margin-top: -10px; margin-bottom: 20px;">
                                 <p style="border-left: 3px; border-right: none; padding-left: 3px;"><strong>8</strong>
                                     <span style="padding-left: 5px;">Date of birth (MM-DD-YYYY) (see
-                                        instructions)</span></p>
+                                        instructions)</span>
+                                </p>
                             </div>
                             <span style="padding-left: 50px; "><strong>{{account.create_date}}</strong></span>
                         </td>
                     </tr>
                 </table>
+
                 <div style="margin-top: -2px;">
                     <strong style="background-color: black; color: aliceblue;">Part II</strong>
                     <strong style="padding-left: 10px;">Claim of Tax Treaty Benefits</strong>(for chapter 3 purposes
                     only) (see instructions)
+                    <div style="margin-top: -10px;">
+                        <span class="bod-bottom  d-in" style="min-width: 1000px;"></span>
+                    </div>
+                </div>
+                <div>
+                    <p> <strong>9</strong> <span style="padding-left: 8px;">I certify that the beneficial owner is a
+                            resident of <span class="bod-bottom  d-in" style="min-width: 500px;"></span> within the
+                            meaning of the income tax
+                            treaty between the United States and that country. </span> </p>
+                    <p></p>
+                    <p style="margin-bottom: -30px;"> <strong>10</strong> <span style="padding-left: 8px;">
+                            <strong>Special rates and conditions</strong>(if applicable—see instructions): The
+                            beneficial owner is claiming the provisions of Article and paragraph
+                            <span class="bod-bottom  d-in" style="min-width: 200px;"></span> of the treaty identified on
+                            line 9 above to claim <span class="bod-bottom  d-in" style="min-width: 30px;"></span> a %
+                            rate of withholding on (specify type of income):<span class="bod-bottom  d-in"
+                                style="min-width: 1000px;"></span>Explain the additional conditions in the Article and
+                            paragraph the beneficial owner meets to be eligible for the rate of withholding: <span
+                                class="bod-bottom  d-in" style="min-width: 200px;"></span>
+                        </span> </p>
+                    <p></p>
+                </div>
+                <span class="bod-bottom  d-in mt-50" style="min-width: 1000px;"></span>
+                <div style="margin-top: -2px;">
+                    <strong style="background-color: black; color: aliceblue;">Part III</strong>
+                    <strong style="padding-left: 10px;">Certification</strong>
                 </div>
                 <div style="margin-top: -12px;">
                     <span class="bod-bottom  d-in" style="min-width: 1000px;"></span>
@@ -3297,7 +3325,7 @@
                     </div>
                 </div>
             </div>
-            <div style="margin-top: 300px;">
+            <div style="margin-top: 200px;">
                 <div class="foot-right">
                     <span class="pt-15">(06/2017) </span>
                     <div class="light-p pad">
