--- a/margin.html
+++ b/margin.html
@@ -2973,8 +2973,8 @@
         </div>
         <!-- .......................................... -->
         <!-- Add page 11... -->
-        <div class="container" style="margin-top: 500px; font-size: 14px;">
-            <div class="header">
+        <div class="container" style="font-size: 14px;">
+            <div class="header mt-50">
                 <td class="pad0">
                     <table width="100%" cellspacing="0">
                         <tr>
@@ -3325,7 +3325,7 @@
                     </div>
                 </div>
             </div>
-            <div style="margin-top: 50px;">
+            <div>
                 <div class="foot-right">
                     <span class="pt-15">(06/2017) </span>
                     <div class="light-p pad">
