--- a/margin.html
+++ b/margin.html
@@ -3054,7 +3054,7 @@
                                             provided to your jurisdiction of residence.</p>
                                     </div>
                                 </div>
-                                <div style="margin-top: -10px;">
+                                <div style="margin-top: -7px; font-size: 16px;">
                                     <div>
                                         <span class="bod-bottom  d-in" style="min-width: 1000px;"></span>
                                     </div>
