--- a/margin.html
+++ b/margin.html
@@ -3054,11 +3054,11 @@
                                             provided to your jurisdiction of residence.</p>
                                     </div>
                                 </div>
-                                <div style="margin-top: -7px; font-size: 16px;">
+                                <div style="font-size: 16px;">
                                     <div>
                                         <span class="bod-bottom  d-in" style="min-width: 1000px;"></span>
                                     </div>
-                                    <div style="margin-top: -5px;">
+                                    <div style="margin-top: 2px;">
                                         <strong style="background-color: black; color: aliceblue;">Part I</strong>
                                         <strong style="padding-left: 10px;">Identification of Beneficial
                                             Owner</strong>(see instructions)
