--- a/margin.html
+++ b/margin.html
@@ -3327,7 +3327,7 @@
                 </div>
             </div>
             <div>
-                <div class="foot-right">
+                <div class="foot-right mt-50">
                     <span class="pt-15">(06/2017) </span>
                     <div class="light-p pad">
                         11
