--- a/margin.html
+++ b/margin.html
@@ -3092,7 +3092,7 @@
                     <tr style="border:1px solid black; border-left: none; border-right: none;">
                         <div>
                             <td>
-                                <div style=" margin-top: -10px; margin-bottom: 20px;">
+                                <div style=" margin-top: -10px;">
                                     <p style="border-left: 3px; margin-bottom: 20px;"><strong>3</strong> <span
                                             style="padding-left: 5px; ">Permanent
                                             residence address (street, apt. or
