--- a/margin.html
+++ b/margin.html
@@ -3092,8 +3092,8 @@
                     <tr style="border:1px solid black; border-left: none; border-right: none;">
                         <div>
                             <td>
-                                <div style=" margin-top: -10px;">
-                                    <p style="border-left: 3px; margin-bottom: 20px;"><strong>3</strong> <span
+                                <div style=" margin-top: -10px; margin-bottom: 20px;">
+                                    <p style="border-left: 3px; "><strong>3</strong> <span
                                             style="padding-left: 5px; ">Permanent
                                             residence address (street, apt. or
                                             suite no., or rural route). <strong>. Do not use a P.O. box or in-care-of
