--- a/margin.html
+++ b/margin.html
@@ -3106,8 +3106,8 @@
                     <tr style="border:1px solid black; border-left: none; border-right: none; ">
                         <div>
                             <td>
-                                <div style="margin-top: -30px; margin-bottom: 20px;">
-                                    <p style="border-left: 3px; "><span style="padding-left: 20px;">City or town, state
+                                <div style="margin-top: -60px; margin-bottom: 20px;">
+                                    <p style="border-left: 3px; "><span style="padding-left: 20px; margin-top: 30px;">City or town, state
                                             or province. Include postal code where appropriate.</span></p>
                                 </div>
                                 <span><strong
