--- a/margin.html
+++ b/margin.html
@@ -3092,14 +3092,14 @@
                     <tr style="border:1px solid black; border-left: none; border-right: none;">
                         <div>
                             <td>
-                                <!-- <div style=" margin-top: -10px; margin-bottom: 20px;">
+                                <div style="">
                                     <p style="border-left: 3px; "><strong>3</strong> <span
                                             style="padding-left: 5px; ">Permanent
                                             residence address (street, apt. or
                                             suite no., or rural route). <strong>. Do not use a P.O. box or in-care-of
                                                 address. </strong>
                                         </span></p>
-                                </div> -->
+                                </div>
                             </td>
                         </div>
                     </tr>
