--- a/margin.html
+++ b/margin.html
@@ -3073,7 +3073,7 @@
                         <div>
                             <td>
                                 <div style="margin-top: -8px; margin-bottom: 20px;">
-                                    <p><strong>1</strong> <span style="padding-left: 5px;">Name
+                                    <p style="margin-top: 2px;" ><strong>1</strong> <span style="padding-left: 5px;">Name
                                             of individual who is the beneficial
                                             Owner</strong>(see instructions)
                                         </span> </p>
@@ -3081,7 +3081,7 @@
                                 <span><strong style="padding-left: 70px;">{{account_info.name_chinese}}</strong></span>
                             </td>
                             <td style="border:1px solid black; border-right: none;">
-                                <div style="margin-top: -60px; margin-bottom: 20px;">
+                                <div style="margin-top: -80px; margin-bottom: 20px;">
                                     <p><strong>2</strong> <span style="padding-left: 5px;">Country of citizenship</span>
                                     </p>
                                 </div>
