--- a/margin.html
+++ b/margin.html
@@ -3092,7 +3092,7 @@
                     <tr style="border:1px solid black; border-left: none; border-right: none;">
                         <div>
                             <td>
-                                <div style="">
+                                <div style="margin-top: -10px; margin-bottom: 20px;">
                                     <p style="border-left: 3px; "><strong>3</strong> <span
                                             style="padding-left: 5px; ">Permanent
                                             residence address (street, apt. or
@@ -3106,7 +3106,7 @@
                     <tr style="border:1px solid black; border-left: none; border-right: none; ">
                         <div>
                             <td>
-                                <div style="">
+                                <div style="margin-top: -10px; margin-bottom: 20px;">
                                     <p style="border-left: 3px; "><span style="padding-left: 20px; margin-top: 30px;">City or town, state
                                             or province. Include postal code where appropriate.</span></p>
                                 </div>
