--- a/margin.html
+++ b/margin.html
@@ -3114,8 +3114,8 @@
                                         style="padding-left: 50px;">{{account_info.identification_country.name_en_US}}</strong></span>
                             </td>
                             <td style="border:1px solid black; border-right: none;">
-                                <div style="margin-top: -12px; margin-bottom: 20px;">
-                                    <p style="border-left: 3px; "> <span style="padding-left: 5px;">Country</span></p>
+                                <div style="margin-top: -10px; margin-bottom: 20px;">
+                                    <p style="border-left: 3px; "> <span style="padding-left: 5px; margin-top: 2px;">Country</span></p>
                                 </div>
                                 <span><strong>{{account_info.identification_country}}</strong></span>
                             </td>
