--- a/margin.html
+++ b/margin.html
@@ -3115,7 +3115,7 @@
                             </td>
                             <td style="border:1px solid black; border-right: none;">
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
-                                    <p style="border-left: 3px; "> <span style="padding-left: 5px; margin-top: 2px;">Country</span></p>
+                                    <p style="border-left: 3px; "> <span style="padding-left: 5px;">Country</span></p>
                                 </div>
                                 <span><strong>{{account_info.identification_country}}</strong></span>
                             </td>
