--- a/margin.html
+++ b/margin.html
@@ -3107,6 +3107,22 @@
                         <div>
                             <td>
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
+                                    <p style="margin-top: 2px;" ><strong>1</strong> <span style="padding-left: 5px;">Name
+                                            of individual who is the beneficial
+                                            Owner</strong>(see instructions)
+                                        </span> </p>
+                                </div>
+                                <span><strong style="padding-left: 70px;">{{account_info.name_chinese}}</strong></span>
+                            </td>
+                            <td style="border:1px solid black; border-right: none;">
+                                <div style="margin-top: -10px; margin-bottom: 20px;">
+                                    <p><strong>2</strong> <span style="padding-left: 5px;">Country of citizenship</span>
+                                    </p>
+                                </div>
+                                <span><strong>{{account_info.identification_country.name_en_US}}</strong></span>
+                            </td>
+                            <!-- <td>
+                                <div style="margin-top: -10px; margin-bottom: 20px;">
                                     <p style="border-left: 3px; "><span style="padding-left: 20px; margin-top: 30px;">City or town, state
                                             or province. Include postal code where appropriate.</span></p>
                                 </div>
@@ -3118,7 +3134,7 @@
                                     <p style="border-left: 3px; "> <span style="padding-left: 5px;">Country</span></p>
                                 </div>
                                 <span><strong>{{account_info.identification_country}}</strong></span>
-                            </td>
+                            </td> -->
                         </div>
                     </tr>
                     <tr style="border:1px solid black; border-left: none; border-right: none; ">
