--- a/margin.html
+++ b/margin.html
@@ -3107,16 +3107,15 @@
                         <div>
                             <td>
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
-                                    <p style="margin-top: 2px;" ><strong>1</strong> <span style="padding-left: 5px;">Name
-                                            of individual who is the beneficial
-                                            Owner</strong>(see instructions)
+                                    <p style="margin-top: 2px;" ><span style="padding-left: 5px;">City or town, state
+                                        or province. Include postal code where appropriate.
                                         </span> </p>
                                 </div>
-                                <span><strong style="padding-left: 70px;">{{account_info.name_chinese}}</strong></span>
+                                <span><strong style="padding-left: 70px;">{{account_info.identification_country.name_en_US}}</strong></span>
                             </td>
                             <td style="border:1px solid black; border-right: none;">
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
-                                    <p><strong>2</strong> <span style="padding-left: 5px;">Country of citizenship</span>
+                                    <p><strong>2</strong> <span style="padding-left: 5px;">Country</span>
                                     </p>
                                 </div>
                                 <span><strong>{{account_info.identification_country.name_en_US}}</strong></span>
