--- a/margin.html
+++ b/margin.html
@@ -3111,14 +3111,14 @@
                                         or province. Include postal code where appropriate.
                                         </span> </p>
                                 </div>
-                                <span><strong style="padding-left: 70px;">{{account_info.identification_country.name_en_US}}</strong></span>
+                                
                             </td>
                             <td style="border:1px solid black; border-right: none;">
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
-                                    <p><strong>2</strong> <span style="padding-left: 5px;">Country</span>
+                                    <p><span style="padding-left: 5px;">Country</span>
                                     </p>
                                 </div>
-                                <span><strong>{{account_info.identification_country.name_en_US}}</strong></span>
+                               
                             </td>
                             <!-- <td>
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
