--- a/margin.html
+++ b/margin.html
@@ -4101,13 +4101,13 @@
         <!-- Adding page 13  -->
         <!-- ................................................-->
 
-        <div class="container" style="font-size: 16px;">
+        <div class="container">
             <div style="margin-top: 200px;">&nbsp;</div>
             <div class="header mt-15">
                 <div class="head-left">
                     <img src="images/logo.jpg" alt="logo">
                 </div>
-                <div class="head-right" style="padding-top: 15px;">
+                <div class="head-right" style="padding-top: 15px; font-size: 14px;">
                     <p>9/F Connaught Harbourfront House,<br>
                         35-36 Connaught Road West, Hong Kong<br>
                         香港干諾道西 35-36 號康諾維港大廈 9 樓<br>
