--- a/margin.html
+++ b/margin.html
@@ -4107,7 +4107,7 @@
                 <div class="head-left">
                     <img src="images/logo.jpg" alt="logo">
                 </div>
-                <div class="head-right" style="padding-top: 15px; font-size: 14px;">
+                <div class="head-right" style="padding-top: 15px;">
                     <p>9/F Connaught Harbourfront House,<br>
                         35-36 Connaught Road West, Hong Kong<br>
                         香港干諾道西 35-36 號康諾維港大廈 9 樓<br>
@@ -4123,7 +4123,7 @@
                 <h3 class="mini-container"><u>香港證券交易投資者識別碼及場外證券交易匯報制度個人資料收集聲明</u></h3>
                 <h3 class="mini-container"><u>客戶同意書 </u></h3>
             </div>
-            <div>
+            <div style="font-size: 16px;">
                 <p>本人/吾等明白並同意利盟證券有限公司
                     (“利盟證券”)提供與在香港聯合交易所(“聯交所”)上市或買賣證券之相關服務，以及為遵守不時生效的聯交所與證券及期貨事務監察委員會(“證監會”)的規則和規定，利盟證券可收集、儲存、處理、使用、披露及轉移與本人/吾等有關的個人資料（包括本人/吾等的客戶識別資訊及券商客戶編碼）。在不限制以上的內容的前提下，當中包括
                 </p>
