--- a/cash.html
+++ b/cash.html
@@ -3883,10 +3883,8 @@
     <!-- Adding page 13  -->
     <!-- ................................................-->
 
-   
-    <div class="container">
-        <div style="margin-top: 200px;">&nbsp;</div>
-        <div class="header mt-15">
+    <div class="container" style="margin-top: 300px;">
+        <div class="header">
             <div class="head-left">
                 <img src="images/logo.jpg" alt="logo">
             </div>
@@ -3898,20 +3896,20 @@
             </div>
         </div>
         <br><br>
-        <p class="linespace1-5 mt-15" style="font-size: 16px;">
+        <p class="linespace1-5 mt-15">
             致 利盟證券有限公司:
         </p>
         <br><br>
-        <div class="linespace1-5" style="font-size: 18;">
+        <div class="linespace1-5">
             <h3 class="mini-container"><u>香港證券交易投資者識別碼及場外證券交易匯報制度個人資料收集聲明</u></h3>
             <h3 class="mini-container"><u>客戶同意書 </u></h3>
         </div>
-        <div style="font-size: 16px;">
+        <div>
             <p>本人/吾等明白並同意利盟證券有限公司
                 (“利盟證券”)提供與在香港聯合交易所(“聯交所”)上市或買賣證券之相關服務，以及為遵守不時生效的聯交所與證券及期貨事務監察委員會(“證監會”)的規則和規定，利盟證券可收集、儲存、處理、使用、披露及轉移與本人/吾等有關的個人資料（包括本人/吾等的客戶識別資訊及券商客戶編碼）。在不限制以上的內容的前提下，當中包括
             </p>
         </div>
-        <div style="font-size: 16px;" >
+        <div>
             <ul>
                 <div style="margin-top: 30px">(a)</div>
                 <div style="padding-left: 40px; margin-top: -21px; text-align: justify;">
@@ -3939,14 +3937,14 @@
                 </div>
             </ul>
         </div>
-        <div style="margin-top: 50px; text-align: justify; font-size: 16px;" >
+        <div style="margin-top: 50px; text-align: justify;">
             <p>本人/吾等亦同意，即使本人/吾等其後宣稱撤回同意， 貴公司在本人/吾等宣稱撤回同意後，仍可繼續儲存、處理、使用、披露或轉移本人/吾等的個人資料以作上述用途。</p>
         </div>
-        <div style="margin-top: 30px; text-align: justify; margin-bottom: 40px; font-size: 16px;">
+        <div style="margin-top: 30px; text-align: justify; margin-bottom: 40px;">
             <p>本人/吾等如未能向 貴公司提供個人資料或拒絕或撤回同意，可能意味著
                 貴公司不會或不能夠再（視情況而定）執行本人/吾等的交易指示或向本人/吾等提供證券交易之相關服務，惟出售、轉出或提取本人/吾等現有的證券持倉（如有）除外。 </p>
         </div>
-        <div class="foot-right" style="margin-top: 600px;">
+        <div class="foot-right" style="margin-top: 650px;">
             <span class="pt-15">(06/2017) </span>
             <div class="light-p pad">
                 13
