--- a/cash.html
+++ b/cash.html
@@ -3884,7 +3884,7 @@
     <!-- ................................................-->
 
     <div class="container" style="margin-top: 300px;">
-        <div style="margin-top: 200px;">&nbsp;</div>
+        <div class="mt20">&nbsp;</div>
             <div class="header mt-15">
                 <div class="head-left">
                     <img src="images/logo.jpg" alt="logo">
