--- a/cash.html
+++ b/cash.html
@@ -3956,7 +3956,8 @@
     <!-- ................................................-->
     <!-- Adding page 14 -->
     <div class="container">
-        <div class="header mt-50">
+        <div class="mt-20">&nbsp;</div>
+        <div class="header mt-20">
             <div class="head-left">
                 <img src="images/logo.jpg" alt="logo">
             </div>
