--- a/cash.html
+++ b/cash.html
@@ -3956,7 +3956,7 @@
     <!-- ................................................-->
     <!-- Adding page 14 -->
     <div class="container">
-        <div class="mt-50">&nbsp;</div>
+        <div class="mt-20">&nbsp;</div>
         <div class="header mt-20">
             <div class="head-left">
                 <img src="images/logo.jpg" alt="logo">
@@ -3969,34 +3969,34 @@
             </div>
         </div>
         <br><br>
-        <p class="linespace1-5 mt-15" style="margin-top: -15px">
+        <p class="linespace1-5 mt-15" style="margin-top: -15px; font-size: 16px;">
             備註： 本條文所述的“券商客戶編碼＂及“客戶的身份識別資料＂具有
         </p>
-        <p class="linespace1-5 mt-15">
+        <p class="linespace1-5 mt-15 font-size 16px">
             <u>
                 《證券及期貨事務監察委員會持牌人或註冊人操守準則》第 5.6 段 所界定的含義。
             </u>
         </p>
         <div>
-            <label>客戶簽署: <span class="bod-bottom  d-in mt-50"
+            <label style="font-size: 16px;">客戶簽署: <span class="bod-bottom  d-in mt-50"
                     style="min-width: 220px; margin-top: 50px;"></span></label>
         </div>
         <div>
-            <label>客戶名稱: <span class="bod-bottom  d-in mt-50"
+            <label style="font-size: 16px;">客戶名稱: <span class="bod-bottom  d-in mt-50"
                     style="min-width: 220px; margin-top: 50px;"><strong>{{account_info.name_chinese}}</strong></span></label>
         </div>
         <div>
-            <label>客戶號碼: <span class="bod-bottom  d-in mt-50"
+            <label style="font-size: 16px;">客戶號碼: <span class="bod-bottom  d-in mt-50"
                     style="min-width: 220px; margin-top: 50px;"><strong>{{account.bank_account_number}}</strong></span></label>
         </div>
         <div>
-            <label>日 期：<span class="bod-bottom  d-in mt-50"
+            <label style="font-size: 16px;">日 期：<span class="bod-bottom  d-in mt-50"
                     style="min-width: 220px; margin-top: 50px;"><strong>{{account.create_date}}</strong></span></label>
         </div>
         <div>
             <span class="bod-bottom  d-in mt-50" style="min-width: 1000px; margin-top: 50px;"></span>
         </div>
-        <p style="text-align: justify; margin-top: 30px;">
+        <p style="text-align: justify; margin-top: 30px; font-size: 16px;">
             請客戶盡速將本「同意書」簽署並以電郵 cs.gpsl@grandpartners.com.hk 或傳真 (852) 3102 1855或郵寄方式(地址：香港干諾道西35-36號康諾維港大廈9樓)
             回覆至本公司。否則，當上述制度實施生效時，本公司將無法為客戶提供香港證券之買入服務，客戶只能賣出所持證券，直至客戶簽回同意書為止。如客戶有任何查詢，請於辦公室時間致電本公司的客戶服務熱線 (852)
             3701
