--- a/margin.html
+++ b/margin.html
@@ -1784,11 +1784,12 @@
             <div class="clear break-after"></div>
             <!--page4-->
         </div>
+        <!-- ............................ 
+    page 5
 
+
+     ........................... -->
         <div class="container">
-
-
-
             <div class="mt10">&nbsp;</div>
             <div class=" pad mt-15">
                 致：利盟證券有限公司<br>
@@ -2239,7 +2240,7 @@
                 <div class="foot-right">
                     <span class="pt-15"> </span>
                     <div class="light-p pad">
-                        6
+                        9
                     </div>
                 </div>
             </div>
@@ -2340,7 +2341,7 @@
                 <div class="foot-right">
                     <span class="pt-15">(06/2017) </span>
                     <div class="light-p pad">
-                        7
+                        6
                     </div>
                 </div>
                 <div class="right text-center" style="margin-right: 15px;">
@@ -2667,7 +2668,7 @@
                 <div class="foot-right">
                     <span class="pt-15">(06/2017) </span>
                     <div class="light-p pad">
-                        9
+                        7
                     </div>
                 </div>
             </div>
@@ -3073,7 +3074,7 @@
                         <div>
                             <td>
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
-                                    <p style="margin-top: 2px;" ><strong>1</strong> <span style="padding-left: 5px;">Name
+                                    <p style="margin-top: 2px;"><strong>1</strong> <span style="padding-left: 5px;">Name
                                             of individual who is the beneficial
                                             Owner</strong>(see instructions)
                                         </span> </p>
@@ -3107,18 +3108,18 @@
                         <div>
                             <td>
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
-                                    <p style="margin-top: 2px;" ><span style="padding-left: 5px;">City or town, state
-                                        or province. Include postal code where appropriate.
+                                    <p style="margin-top: 2px;"><span style="padding-left: 5px;">City or town, state
+                                            or province. Include postal code where appropriate.
                                         </span> </p>
                                 </div>
-                                
+
                             </td>
                             <td style="border:1px solid black; border-right: none;">
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
                                     <p><span style="padding-left: 5px;">Country</span>
                                     </p>
                                 </div>
-                               
+
                             </td>
                         </div>
                     </tr>
@@ -4128,7 +4129,7 @@
                     (“利盟證券”)提供與在香港聯合交易所(“聯交所”)上市或買賣證券之相關服務，以及為遵守不時生效的聯交所與證券及期貨事務監察委員會(“證監會”)的規則和規定，利盟證券可收集、儲存、處理、使用、披露及轉移與本人/吾等有關的個人資料（包括本人/吾等的客戶識別資訊及券商客戶編碼）。在不限制以上的內容的前提下，當中包括
                 </p>
             </div>
-            <div style="font-size: 16px;" >
+            <div style="font-size: 16px;">
                 <ul>
                     <div style="margin-top: 30px">(a)</div>
                     <div style="padding-left: 40px; margin-top: -21px; text-align: justify;">
@@ -4156,7 +4157,7 @@
                     </div>
                 </ul>
             </div>
-            <div style="margin-top: 50px; text-align: justify; font-size: 16px;" >
+            <div style="margin-top: 50px; text-align: justify; font-size: 16px;">
                 <p>本人/吾等亦同意，即使本人/吾等其後宣稱撤回同意， 貴公司在本人/吾等宣稱撤回同意後，仍可繼續儲存、處理、使用、披露或轉移本人/吾等的個人資料以作上述用途。</p>
             </div>
             <div style="margin-top: 30px; text-align: justify; margin-bottom: 40px; font-size: 16px;">
