--- a/margin.html
+++ b/margin.html
@@ -2239,7 +2239,7 @@
             <div class="clear break-after"></div>
             
         </div>
-   <!--page6-->
+        <!--page6-->
         <div class="container">
 
 
@@ -2345,7 +2345,7 @@
             <div class="clear break-after"></div>
            
         </div>
-   <!--page8 cancel page-->
+        <!--page8 cancel page-->
         <div class="container">
 
 
@@ -2945,7 +2945,6 @@
             </div>
             <div class="clear break-after"></div>
         </div>
-        <!-- .......................................... -->
         <!-- Add page 11... -->
         <div class="container" style="font-size: 14px;">
             <div class="mt20">&nbsp;</div>
@@ -3311,8 +3310,7 @@
             </div>
             <div class="clear break-after"></div>
         </div>
-        <!-- //..................................................... // -->
-           <!--page15-->
+        <!--page15-->
         <div class="container">
             <div class="mt-15"></div>
             <div class="header mt-15">
@@ -4067,8 +4065,6 @@
 
             <div class="clear break-after"></div>
         </div>
-        <!--page 14-->
-        <!-- ................................................-->
         <!-- Adding page 13  -->
         <div class="container">
             <div style="margin-top: 200px;">&nbsp;</div>
@@ -4140,6 +4136,7 @@
             </div>
             <div class="clear break-after"></div>
         </div>
+        <!-- Adding page 13  -->
         <!-- ................................................-->
         <!-- Adding page 14 -->
         <div class="container">
