--- a/margin.html
+++ b/margin.html
@@ -4152,14 +4152,16 @@
                 </div>
             </div>
             <br><br>
-            <p class="linespace1-5 mt-15" style="margin-top: -15px; font-size: 20px;">
-                備註： 本條文所述的“券商客戶編碼＂及“客戶的身份識別資料＂具有
+            <p class="linespace1-5 mt-15" style="margin-top: -15px; font-size: 25px;">
+                備註： 本條文所述的“券商客戶編碼＂及“客戶的身份識別資料＂具有  <u>
+                    《證券及期貨事務監察委員會持牌人或註冊人操守準則》第 5.6 </u> 段 所界定的含義。
+                
             </p>
-            <p class="linespace1-5 mt-15" style="font-size: 20px;">
+            <!-- <p class="linespace1-5 mt-15" style="font-size: 20px;">
                 <u>
                     《證券及期貨事務監察委員會持牌人或註冊人操守準則》第 5.6 段 所界定的含義。
                 </u>
-            </p>
+            </p> -->
             <div style="font-size: 26px;">
                 <label>客戶簽署: <span class="bod-bottom  d-in mt-50"
                         style="min-width: 220px; margin-top: 50px;"></span></label>
