--- a/margin.html
+++ b/margin.html
@@ -4157,40 +4157,22 @@
                     《證券及期貨事務監察委員會持牌人或註冊人操守準則》第 5.6 </u> 段 所界定的含義。
                 
             </p>
-            <div style="margin-top: 20px; font-size: 25px;">
-                <div style="font-size: 26px;">
-                    <label>客戶簽署: <span class="bod-bottom  d-in mt-50"
-                            style="min-width: 220px; margin-top: 50px;"></span></label>
-                </div>
-                <div style="font-size: 16px;">
-                    <label>客戶名稱: <span class="bod-bottom  d-in mt-50"
-                            style="min-width: 220px; margin-top: 50px;"><strong>{{account_info.name_chinese}}</strong></span></label>
-                </div>
-                <div style="font-size: 16px;">
-                    <label>客戶號碼: <span class="bod-bottom  d-in mt-50"
-                            style="min-width: 220px; margin-top: 50px;"><strong>{{account.bank_account_number}}</strong></span></label>
-                </div>
-                <div style="font-size: 16px;">
-                    <label>日 期：<span class="bod-bottom  d-in mt-50"
-                            style="min-width: 220px; margin-top: 50px;"><strong>{{account.create_date}}</strong></span></label>
-                </div>
-            </div>
-            <!-- <div style="font-size: 26px;">
+            <div style="font-size: 25px; margin-top: 20px;">
                 <label>客戶簽署: <span class="bod-bottom  d-in mt-50"
                         style="min-width: 220px; margin-top: 50px;"></span></label>
             </div>
-            <div style="font-size: 16px;">
+            <div style="font-size: 25px;">
                 <label>客戶名稱: <span class="bod-bottom  d-in mt-50"
                         style="min-width: 220px; margin-top: 50px;"><strong>{{account_info.name_chinese}}</strong></span></label>
             </div>
-            <div style="font-size: 16px;">
+            <div style="font-size: 25px;">
                 <label>客戶號碼: <span class="bod-bottom  d-in mt-50"
                         style="min-width: 220px; margin-top: 50px;"><strong>{{account.bank_account_number}}</strong></span></label>
             </div>
-            <div style="font-size: 16px;">
+            <div style="font-size: 25px;">
                 <label>日 期：<span class="bod-bottom  d-in mt-50"
                         style="min-width: 220px; margin-top: 50px;"><strong>{{account.create_date}}</strong></span></label>
-            </div> -->
+            </div>
             <div>
                 <span class="bod-bottom  d-in mt-50" style="min-width: 1000px; margin-top: 50px;"></span>
             </div>
