--- a/margin.html
+++ b/margin.html
@@ -4185,12 +4185,12 @@
                 </p>
             </div>
             
-            <div class="foot-right">
+            <!-- <div class="foot-right">
                 <span class="pt-15">(06/2017) </span>
                 <div class="light-p pad">
                     14
                 </div>
-            </div>
+            </div> -->
             <div class="clear break-after"></div>
         </div>
         <!-- ................................................-->
