--- a/margin.html
+++ b/margin.html
@@ -4185,8 +4185,8 @@
                 </p>
             </div> -->
             <div>
-                <p style="font-size: 25px; ">
-                    請客戶盡速將本「同意書」簽署並以電郵 cs.gpsl@grandpartners.com.hk 或傳真 (852) 3102 1855或郵寄方式(地址：香港干諾道西35-36號康諾維港大廈9樓)
+                <p style="font-size: 20px; ">
+                    請客戶盡速將本「同意書」簽署並以電郵 cs.gpsl@grandpartners.com.hk 或傳真 (852) <br> 3102 1855或郵寄方式(地址：香港干諾道西35-36號康諾維港大 <br> 廈9樓)
                     回覆至本公司。否則，當上述制度實施生效時，本公司將無法為客戶提供香港證券之買入服務，客戶只能賣出所持證券，直至客戶簽回同意書為止。如客戶有任何查詢，請於辦公室時間致電本公司的客戶服務熱線 (852)
                     3701
                     3200。
