--- a/margin.html
+++ b/margin.html
@@ -4080,51 +4080,51 @@
                 </div>
             </div>
             <br><br>
-            <p class="linespace1-5 mt-15" style="font-size: 16px;">
+            <p class="linespace1-5 mt-15" style="font-size: 20px;">
                 致 利盟證券有限公司:
             </p>
             <br><br>
             <div class="linespace1-5" style="font-size: 18;">
-                <h3 class="mini-container"><u>香港證券交易投資者識別碼及場外證券交易匯報制度個人資料收集聲明</u></h3>
-                <h3 class="mini-container"><u>客戶同意書 </u></h3>
+                <h3 class="mini-container" style="font-size: 20px;" ><u>香港證券交易投資者識別碼及場外證券交易匯報制度個人資料收集聲明</u></h3>
+                <h3 class="mini-container" style="font-size: 20px;"><u>客戶同意書 </u></h3>
             </div>
-            <div style="font-size: 16px;">
+            <div style="font-size: 20px;">
                 <p>本人/吾等明白並同意利盟證券有限公司
                     (“利盟證券”)提供與在香港聯合交易所(“聯交所”)上市或買賣證券之相關服務，以及為遵守不時生效的聯交所與證券及期貨事務監察委員會(“證監會”)的規則和規定，利盟證券可收集、儲存、處理、使用、披露及轉移與本人/吾等有關的個人資料（包括本人/吾等的客戶識別資訊及券商客戶編碼）。在不限制以上的內容的前提下，當中包括
                 </p>
             </div>
-            <div style="font-size: 16px;">
+            <div style="font-size: 20px;">
                 <ul>
                     <div style="margin-top: 30px">(a)</div>
                     <div style="padding-left: 40px; margin-top: -21px; text-align: justify;">
-                        <p>根據不時生效的聯交所及證監會規則和規定，向聯交所及／或證監會披露及轉移本人/吾等的個人資料（包括客戶識別資訊及券商客戶編碼）;</p>
+                        <p style="font-size: 20px;">根據不時生效的聯交所及證監會規則和規定，向聯交所及／或證監會披露及轉移本人/吾等的個人資料（包括客戶識別資訊及券商客戶編碼）;</p>
                     </div>
-                    <div style="margin-top: 30px;">(b) <span style="padding-left: 20px;">允許聯交所:</span></div>
-                    <div style="padding-left: 40px; text-align: justify;">
+                    <div style="margin-top: 30px;" style="font-size: 20px;">(b) <span style="padding-left: 20px;">允許聯交所:</span></div>
+                    <div style="padding-left: 40px; text-align: justify;" style="font-size: 20px;">
                         <p> <span style="padding-right: 30px;">(i)</span>
                             收集、儲存、處理及使用本人/吾等的個人資料（包括客戶的身份識別資訊及券商客戶編碼），以便監察和監管市場及執行《聯交所規則》之用途；(ii)
                             向香港相關監管機構和執法機構（包括但不限於證監會）披露及轉移有關資料，以配合其履行關於香港金融市場的法定職能；及 (iii)為監察市場目的而使用該等資料進行分析；</p>
                     </div>
-                    <div style="margin-top: 30px">(c) <span style="padding-left: 20px;">允許證監會：</span></div>
+                    <div style="margin-top: 30px;font-size: 20px;">(c) <span style="padding-left: 20px;">允許證監會：</span></div>
                     <div style="padding-left: 40px; text-align: justify;">
-                        <p><span style="padding-right: 30px">(i)</span>
+                        <p><span style="padding-right: 30px;font-size: 20px;">(i)</span>
                             收集、儲存、處理及使用本人/吾等的個人資料（包括客戶的身份識別資訊及券商客戶編碼），以配合其履行關於香港金融市場的監管、監察及執法職能；及(ii)
                             根據適用法例或監管規定向香港相關監管機構和執法機構披露及轉移該等資料；及</p>
                         </p>
                     </div>
-                    <div style="margin-top: 30px">(d) <span style="padding-left: 20px;">向香港中央結算有限公司（“香港結算”）:</span>
+                    <div style="margin-top: 30px;font-size: 20px;">(d) <span style="padding-left: 20px;">向香港中央結算有限公司（“香港結算”）:</span>
                     </div>
-                    <div style="padding-left: 40px; text-align: justify;">
+                    <div style="padding-left: 40px; text-align: justify; font-size: 20px;">
                         <p>提供券商客戶編碼以允許香港結算：(i)從聯交所取得、處理及儲存允許披露及轉移給香港結算屬於本人/吾等的身份識別資訊，及向發行人的股份過戶登記處轉移本人/吾等的身份識別資訊，以便核實本人/吾等未就相關股份認購進行重複申請，以及便利首次公開招股抽籤及首次公開招股結算程序；及
                             (ii)處理及儲存本人/吾等的身份識別資訊，及向發行人、發行人的股份過戶登記處、證監會、聯交所及其他公開招股的有關各方轉移本人/吾等的身份識別資訊，以便處理本人/吾等對有關股份認購的申請，或為載於公開招股發行人的招股章程的任何其他目的。
                         </p>
                     </div>
                 </ul>
             </div>
-            <div style="margin-top: 50px; text-align: justify; font-size: 16px;">
+            <div style="margin-top: 50px; text-align: justify; font-size: 20px;">
                 <p>本人/吾等亦同意，即使本人/吾等其後宣稱撤回同意， 貴公司在本人/吾等宣稱撤回同意後，仍可繼續儲存、處理、使用、披露或轉移本人/吾等的個人資料以作上述用途。</p>
             </div>
-            <div style="margin-top: 30px; text-align: justify; margin-bottom: 40px; font-size: 16px;">
+            <div style="margin-top: 30px; text-align: justify; margin-bottom: 40px; font-size: 20px;">
                 <p>本人/吾等如未能向 貴公司提供個人資料或拒絕或撤回同意，可能意味著
                     貴公司不會或不能夠再（視情況而定）執行本人/吾等的交易指示或向本人/吾等提供證券交易之相關服務，惟出售、轉出或提取本人/吾等現有的證券持倉（如有）除外。 </p>
             </div>
