--- a/cash.html
+++ b/cash.html
@@ -3313,7 +3313,7 @@
                         <div>
                             <td>
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
-                                    <p style="margin-top: 2px;"><strong>1</strong> <span style="padding-left: 5px;">Name
+                                    <p style="margin-top: 2px;"><strong>1</strong> <span style="padding-left: 5px; margin-top: -5px;">Name
                                             of individual who is the beneficial
                                             Owner</strong>(see instructions)
                                         </span> </p>
