--- a/cash.html
+++ b/cash.html
@@ -3311,6 +3311,26 @@
                 <table style="width: 100%;">
                     <tr style="border:1px solid black; border-left: none; border-right: none;">
                         <div>
+                            <td>
+                                <div style="margin-top: -10px; margin-bottom: 20px;">
+                                    <p style="margin-top: 2px;"><strong>1</strong> <span style="padding-left: 5px;">Name
+                                            of individual who is the beneficial
+                                            Owner</strong>(see instructions)
+                                        </span> </p>
+                                </div>
+                                <span><strong style="padding-left: 70px;">{{account_info.name_chinese}}</strong></span>
+                            </td>
+                            <td style="border:1px solid black; border-right: none;">
+                                <div style="margin-top: -10px; margin-bottom: 20px;">
+                                    <p><strong>2</strong> <span style="padding-left: 5px;">Country of citizenship</span>
+                                    </p>
+                                </div>
+                                <span><strong>{{account_info.identification_country.name_en_US}}</strong></span>
+                            </td>
+                        </div>
+                    </tr>
+                    <!-- <tr style="border:1px solid black; border-left: none; border-right: none;">
+                        <div> -->
                             <!-- <td>
                                 <div style="margin-top: 10px; margin-bottom: 20px;">
                                     <p style="margin-top: 2px;"><strong>1</strong> <span style="padding-left: 5px;">Name
@@ -3327,8 +3347,8 @@
                                 </div>
                                 <span><strong>{{account_info.identification_country.name_en_US}}</strong></span>
                             </td> -->
-                        </div>
-                    </tr>
+                        <!-- </div>
+                    </tr> -->
                     <tr style="border:1px solid black; border-left: none; border-right: none;">
                         <div>
                             <td>
