--- a/cash.html
+++ b/cash.html
@@ -3320,13 +3320,13 @@
                                         <span><strong style="padding-left: 70px;">{{account_info.name_chinese}}</strong></span>
                                     </div>
                             </td>
-                            <td style="border:1px solid black; border-right: none;">
+                            <!-- <td style="border:1px solid black; border-right: none;">
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
                                     <p><strong>2</strong> <span style="padding-left: 5px;">Country of citizenship</span>
                                     </p>
                                 </div>
                                 <span><strong>{{account_info.identification_country.name_en_US}}</strong></span>
-                            </td>
+                            </td> -->
                         </div>
                     </tr>
                     <!-- <tr style="border:1px solid black; border-left: none; border-right: none;">
