--- a/cash.html
+++ b/cash.html
@@ -3319,9 +3319,7 @@
                                             Owner(see instructions)
                                         </span> 
                                     </p>
-                                   
-                                        <!-- <span><strong
-                                            style="padding-left: 70px;">{{account_info.name_chinese}}</strong></span> -->
+                                    <span><strong style="padding-left: 70px;">{{account_info.name_chinese}}</strong></span> -->
                                 </div>
                             </td>
                             <td style="border:1px solid black; border-right: none;">
